upgrade project to java 13. Start on testcontainers intregration